# diana-compose-email

./: .gitignore  CMakeLists.txt  Makefile  README.md
debian/: changelog  control  diana-compose-email.install
src/: CMakeLists.txt  Makefile  compose_email.cc  compose_email.h  compose_email.qrc  compose_email_de.ts  compose_email_es.ts  compose_email_nb.ts  compose_email_ru.ts  compose_email_sv.ts  main.cc
